# geomapper

./: Cargo.toml  README.md
src/: ags.rs  args.rs  bundesland.rs  einwohner.rs  generalpattern.rs  landkries.rs  lat.rs  lon.rs  main.rs  mapper.rs  note.rs  ord.rs  osm.rs  plz.rs  qkm.rs
