[package]
name = "geomapper"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "geomapper for German geographical localization"
homepage = "https://github.com/genomicssport/geomapper"
repository = "https://github.com/genomicssport/geomapper"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
figlet-rs = "0.1.5"
tabled = "0.18.0"
tokio = { version = "1.47.1", features = ["full"] }
